hindsight/notification-fix-test.log
Configuration is affected by the following files:
- cabal.project
- cabal.project.freeze
- cabal.project.local
Build profile: -w ghc-9.10.2 -O1
In order, the following will be built (use -v for more details):
 - hindsight-0.1.0.0 (lib)  --enable-profiling (file src/Hindsight/Store/PostgreSQL/Events/Dispatcher.hs changed)
 - hindsight-0.1.0.0 (test:hindsight-test)  --enable-profiling (dependency rebuilt)
Preprocessing library for hindsight-0.1.0.0...
Building library for hindsight-0.1.0.0...
[13 of 23] Compiling Hindsight.Store.PostgreSQL.Events.Dispatcher ( src/Hindsight/Store/PostgreSQL/Events/Dispatcher.hs, /Users/huginn/code/hindsight2/hindsight/dist-newstyle/build/aarch64-osx/ghc-9.10.2/hindsight-0.1.0.0/build/Hindsight/Store/PostgreSQL/Events/Dispatcher.o, /Users/huginn/code/hindsight2/hindsight/dist-newstyle/build/aarch64-osx/ghc-9.10.2/hindsight-0.1.0.0/build/Hindsight/Store/PostgreSQL/Events/Dispatcher.dyn_o ) [Source file changed]
src/Hindsight/Store/PostgreSQL/Events/Dispatcher.hs:641:29: error: [GHC-39999]
    • Ambiguous type variable ‘a0’ arising from a use of ‘try’
      prevents the constraint ‘(ghc-internal-9.1002.0:GHC.Internal.Exception.Type.Exception
                                  a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance ghc-internal-9.1002.0:GHC.Internal.Exception.Type.Exception
                   SomeException
          -- Defined in ‘ghc-internal-9.1002.0:GHC.Internal.Exception.Type’
        instance ghc-internal-9.1002.0:GHC.Internal.Exception.Type.Exception
                   Session.SessionError
          -- Defined in ‘hasql-1.8.1.4:Hasql.Errors’
        ...plus three others
        ...plus 30 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the first argument of ‘($)’, namely ‘try’
      In a stmt of a 'do' block:
        streamHeadResult <- try $ queryMaxCursor dispatcher
      In the expression:
        do debugConnection dispatcher.config
             $ "✅ Parsed transaction notification: " <> show notification
           streamHeadResult <- try $ queryMaxCursor dispatcher
           case streamHeadResult of
             Right (Just streamHead) -> do ...
             Right Nothing
               -> debugConnection ... $ "❓ No events found in database"
             Left err
               -> debugConnection ...
                    $ "❌ Failed to query stream head: " <> show err
    |
641 |         streamHeadResult <- try $ queryMaxCursor dispatcher
    |                             ^^^

src/Hindsight/Store/PostgreSQL/Events/Dispatcher.hs:656:96: error: [GHC-39999]
    • Ambiguous type variable ‘a0’ arising from a use of ‘show’
      prevents the constraint ‘(Show a0)’ from being solved.
      Relevant bindings include
        err :: a0
          (bound at src/Hindsight/Store/PostgreSQL/Events/Dispatcher.hs:656:16)
        streamHeadResult :: Either a0 (Maybe SQLCursor)
          (bound at src/Hindsight/Store/PostgreSQL/Events/Dispatcher.hs:641:9)
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Show ByteString
          -- Defined in ‘bytestring-0.12.2.0:Data.ByteString.Internal.Type’
        instance (Show k, Show a) => Show (Map k a)
          -- Defined in ‘Data.Map.Internal’
        ...plus 80 others
        ...plus 126 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the second argument of ‘(<>)’, namely ‘show err’
      In the second argument of ‘($)’, namely
        ‘"❌ Failed to query stream head: " <> show err’
      In the expression:
        debugConnection dispatcher.config
          $ "❌ Failed to query stream head: " <> show err
    |
656 |           Left err -> debugConnection dispatcher.config $ "❌ Failed to query stream head: " <> show err
    |                                                                                                ^^^^

Error: [Cabal-7125]
Failed to build hindsight-0.1.0.0 (which is required by test:hindsight-test from hindsight-0.1.0.0).

